--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,6 +12,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  schedule:
+    - cron: '30 12 * * 3'   # Каждую среду в 12:30
+    - cron: '0 22 * * 5'    # Каждую пятницу в 22:00
 
 jobs:
   build:
