--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,18 +18,21 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+        matrix:
+          os: [ubuntu-latest, macos-latest, windows-latest]
+          java: [11, 13, 17]
+    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 17
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        java-version: ${{ matrix.java }}
+        distribution: ${{ matrix.distribution || 'temurin' }}
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
