--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,10 @@ jobs:
         matrix:
           os: [ubuntu-latest, macos-latest, windows-latest]
           java: [11, 13, 17]
+          include:
+          - os: windows-latest
+            java: 13
+            distribution: 'zulu' # Альтернативный дистрибутив для Windows
     runs-on: ${{ matrix.os }}
     permissions:
       contents: read
@@ -66,6 +70,12 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+
+    # Явно указываем версию Gradle, совместимую с Java 17
+    - name: Setup Gradle 8.5+
+      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582
+      with:
+        gradle-version: '8.9'
 
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
